2006-05-25 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Implement extended addressing needed
	for the ATmega256x devices.
	* avrdude.1: Document ATmega256x support.
	* doc/avrdude.texi: Document ATmega256x support.
	Also document Solaris port defaults.

2006-05-24 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c: Start implementing support for ATmega256x;
	jtag2 and bitbang programmers are working, stk500v2
	still needs to be done.
	* avrdude.conf.in: (Ditto.)
	* avrpart.c: (Ditto.)
	* avrpart.h: (Ditto.)
	* config_gram.y: (Ditto.)
	* lexer.l: (Ditto.)

2006-04-18 Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by Julius Luukko <Julius.Luukko@lut.fi>:
	* avrdude.conf.in: Add the "ere-isp-avr" programmer.

2006-04-13 Joerg Wunsch <j@uriah.heep.sax.de>

	* par.c: Add logic to negate parallel-port signals in
	avrdude.conf using a tilde.

	Contributed by Bram Daams:
	* avrdude.conf.in: Add the "atisp" programmer entry that
	makes use of negated signals.

2006-03-28 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add entries for AT90USB{64,128}{6,7}

2006-03-23 Colin O'Flynn <coflynn@newae.com>

	Contributed by Wim Lewis, fix a few typos (patch #4987)
	* avrdude.1: Typo fix

2006-02-27 Colin O'Flynn <coflynn@newae.com>

	Contributed by Wim Lewis, add support for checking device
	signatures in detail (patch #4924 and #4925)
	* avrdude.conf.in: Add signatures
	* avrpart.c: Set default signature
	* avrpart.h: Variable for signature
	* config_gram.y: More signature reading
	* lexer.l: Define that signatures exist
	* main.c: Read signatures and check them against hardware

2006-02-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix paged flash write for AT90PWMx
	(error in datasheet).

2006-01-23 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.in: Bump version.

2006-01-17 Colin O'Flynn <coflynn@newae.com>

	* main.c: Fixed a typo in safemode variable names, fixed bug 15113
	* avrdude.conf.in : Added BS2 and pagel to M162, Patch 4766